gcc/testsuite/gfortran.dg/use_2.f90
! { dg-do compile }
subroutine bar1
  usefoo ! { dg-error "Unclassifiable statement" }
end
